# handwritten-digit-recognition-frontend

./: .gitignore  Cargo.toml  README.md  data.json  index.html  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: codeql.yml
css/: index.css
pkg/: handwritten_digit_recognition.d.ts  handwritten_digit_recognition.js  handwritten_digit_recognition_bg.wasm  handwritten_digit_recognition_frontend.d.ts  handwritten_digit_recognition_frontend.js  handwritten_digit_recognition_frontend_bg.wasm  handwritten_digit_recognition_frontend_bg.wasm.d.ts  package.json
src/: lib.rs  main.js
