[package]
name = "handwritten-digit-recognition-frontend"
version = "0.1.0"
authors = ["Dilshad <dilshadplayingminecraft@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.15.6"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
wasm-bindgen = "0.2.86"
